BattleshipJava 1.3
Replace the two AI levels with five difficulties.

Easy fires at random and Medium targets adjacent tiles, as Level 1 and
Level 2 did. Hard tracks the direction a ship is lying in once it has
two hits. Nightmare adds parity hunting so it cannot waste shots on
squares too small to hold a ship. US Navy builds a probability density
map every turn from the ship sizes still afloat and fires at the most
likely square.